Fixed relationship icon alignment

--- a/src/frontend/shared/styles/RelationshipIconStylesheet.css
+++ b/src/frontend/shared/styles/RelationshipIconStylesheet.css
@@ -17,5 +17,5 @@
 }
 .secondaryPlaceholder {
   display: inline-block;
-  width: 20px;
+  width: 24px;
 }
